--- a/package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
+++ b/package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
@@ -6,9 +6,12 @@
    </PropertyGroup>
 
    <ItemGroup>
+      <PackageReference Include="FakeItEasy" Version="5.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
       <PackageReference Include="NUnit" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+      <PackageReference Include="Shouldly" Version="3.0.2" />
    </ItemGroup>
 
    <ItemGroup>
