--- a/package/Stackage.Core/Stackage.Core.csproj
+++ b/package/Stackage.Core/Stackage.Core.csproj
@@ -1,27 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-   <PropertyGroup>
-      <TargetFramework>netstandard2.0</TargetFramework>
-      <Product>Stackage</Product>
-      <Title>Stackage.Core</Title>
-      <Description>Core behaviour for .NET Core Microservices</Description>
-      <Authors>Andrew Craven</Authors>
-      <RootNamespace>Stackage.Core</RootNamespace>
-      <AssemblyName>Stackage.Core</AssemblyName>
-      <Version>0.0.0</Version>
-      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-   </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Product>Stackage</Product>
+    <Title>Stackage.Core</Title>
+    <Description>Core behaviour for .NET Core Microservices</Description>
+    <Authors>Andrew Craven</Authors>
+    <RootNamespace>Stackage.Core</RootNamespace>
+    <AssemblyName>Stackage.Core</AssemblyName>
+    <Version>0.0.0</Version>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
 
-   <PropertyGroup>
-      <PackageId>Stackage.Core</PackageId>
-      <RepositoryType>git</RepositoryType>
-      <RepositoryUrl>https://dev.azure.com/acraven/stackage/_git/core</RepositoryUrl>
-   </PropertyGroup>
+  <PropertyGroup>
+    <PackageId>Stackage.Core</PackageId>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://dev.azure.com/acraven/stackage/_git/core</RepositoryUrl>
+  </PropertyGroup>
 
-   <ItemGroup>
-      <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0-preview003" />
-   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0-preview004" />
+  </ItemGroup>
 
-   <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
 </Project>
