--- a/package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
+++ b/package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
@@ -7,6 +7,7 @@
 
    <ItemGroup>
       <PackageReference Include="FakeItEasy" Version="5.1.1" />
+      <PackageReference Include="FluentAssertions.Json" Version="5.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
       <PackageReference Include="NUnit" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
