--- a/package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
+++ b/package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
@@ -1,21 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-   <PropertyGroup>
-      <TargetFramework>netcoreapp2.2</TargetFramework>
-      <IsPackable>false</IsPackable>
-      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-   </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <IsPackable>false</IsPackable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
 
-   <ItemGroup>
-      <PackageReference Include="FakeItEasy" Version="5.1.1" />
-      <PackageReference Include="FluentAssertions.Json" Version="5.0.0" />
-      <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
-      <PackageReference Include="NUnit" Version="3.12.0" />
-      <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-      <PackageReference Include="Shouldly" Version="3.0.2" />
-   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FakeItEasy" Version="6.0.1"/>
+    <PackageReference Include="FluentAssertions.Json" Version="5.5.0"/>
+    <PackageReference Include="FluentAssertions" Version="5.10.3"/>
+    <PackageReference Include="Shouldly" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.3"/>
+    <PackageReference Include="NUnit" Version="3.12.0"/>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+  </ItemGroup>
 
-   <ItemGroup>
-      <ProjectReference Include="..\Stackage.Core\Stackage.Core.csproj" />
-   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Stackage.Core\Stackage.Core.csproj"/>
+  </ItemGroup>
 </Project>
