--- a/package/Stackage.Core/Stackage.Core.csproj
+++ b/package/Stackage.Core/Stackage.Core.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Stackage.Core.Abstractions" Version="1.0.0" />
+    <PackageReference Include="Stackage.Core.Abstractions" Version="1.1.0-preview001" />
   </ItemGroup>
 
   <ItemGroup>
