--- a/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
+++ b/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
-    <LangVersion>9.0</LangVersion>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Product>Stackage</Product>
     <Title>Stackage.Core.SystemTextJson</Title>
