--- a/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
+++ b/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -20,6 +21,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Stackage.Core.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Stackage.Core.Abstractions" Version="3.0.0-preview002" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+  </ItemGroup>
+
 </Project>
