--- a/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
+++ b/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Stackage.Core.Abstractions" Version="3.0.0-preview002" />
+    <PackageReference Include="Stackage.Core.Abstractions" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
