--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
       run: dotnet pack --configuration Release -p:Version=0.0.0-ci --output . package/Stackage.Core/Stackage.Core.csproj
 
     - name: Test
-      run: dotnet test --configuration Release package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
+      run: dotnet test --configuration Release -p:TestTfmsInParallel=false package/Stackage.Core.Tests/Stackage.Core.Tests.csproj
