--- a/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
+++ b/package/Stackage.Core.SystemTextJson/Stackage.Core.SystemTextJson.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Product>Stackage</Product>
     <Title>Stackage.Core.SystemTextJson</Title>
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Stackage.Core.Abstractions" Version="3.1.0-preview001" />
+    <PackageReference Include="Stackage.Core.Abstractions" Version="4.0.0-preview001" />
   </ItemGroup>
 
 </Project>
